--- a/composer.json
+++ b/composer.json
@@ -4,5 +4,10 @@
   "require": {
     "php": ">=5.6",
     "symfony/console": "3.2.4"
+  },
+  "autoload": {
+    "psr-4": {
+      "Progression\\": "src/"
+    }
   }
 }
