--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,9 @@
     "php": ">=5.6",
     "symfony/console": "3.2.4"
   },
+  "require-dev": {
+    "codeception/base": "2.2.9"
+  },
   "autoload": {
     "psr-4": {
       "TestTask\\": "src/"
